# omen

./: .gitignore  .golangci.yml  .goreleaser.yml  .mockery.yaml  .release-please-manifest.json  .tool-versions  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPTIMIZATION_ANALYSIS.md  README.md  Taskfile.yml  action.yml  codecov.yml  docusaurus.config.ts  go.mod  go.sum  lefthook.yml  omen.example.toml  omen.toml  osv-scanner.toml  package-lock.json  release-please-config.json  renovate.json  rust-toolchain.toml  server.json  sidebars.ts
.claude-plugin/: CHANGELOG.md  marketplace.json  plugin.json
.claude/commands/: init.md  repo-report.md
.github/workflows/: ci.yml  deploy.yml  omen.yml  release-please.yml  release.yml  scorecard.yml
benches/: analyzers.rs
cmd/omen/: analyze.go  changes.go  churn.go  cohesion.go  complexity.go  config.go  context.go  context_diff_test.go  context_tier_test.go  deadcode.go  defect.go  diff.go  duplicates.go  featureflags.go  graph.go  helpers.go  hotspot.go  init_cmd.go  linthotspot.go  main.go  main_test.go  mcp.go  ownership.go  report.go  report_test.go  root.go  satd.go  score.go  smells.go  tdg.go  temporal.go  trend.go
docs/: configuration.md  examples.md  getting-started.md  how-it-works.md  intro.md  output-formats.md  repository-score.md  research.md  semantic-search.md  supported-languages.md
docs/analyzers/: change-risk.md  churn.md  code-clones.md  cohesion.md  complexity.md  dead-code.md  defect-prediction.md  dependency-graph.md  diff-analysis.md  feature-flags.md  hotspots.md  mutation-testing.md  overview.md  ownership.md  repomap.md  satd.md  smells.md  tdg.md  temporal-coupling.md
docs/integrations/: ci-cd.md  claude-code-plugin.md  mcp-server.md
docs/plans/: 2025-12-03-repository-score-design.md
examples/reports/: BurntSushi-ripgrep.html  gin-gonic-gin.html
examples/repos/: burntSushi-ripgrep.md  discourse-discourse.md  excalidraw-excalidraw.md  gin-gonic-gin.md  tiangolo-fastapi.md
internal/analyzer/: changes.go  changes_commit.go  changes_risk.go  changes_test.go  churn.go  churn_metrics.go  churn_mock_test.go  churn_test.go  cohesion.go  cohesion_test.go  complexity.go  complexity_test.go  deadcode.go  deadcode_test.go  defect.go  defect_test.go  duplicates.go  duplicates_test.go  graph.go  graph_test.go  halstead.go  halstead_test.go  hotspot.go  hotspot_test.go  jit.go  jit_test.go  ownership.go  ownership_test.go  repomap.go  repomap_test.go  satd.go  satd_test.go  smells.go  smells_test.go  tdg.go  tdg_test.go  temporal.go  temporal_mock_test.go  temporal_test.go  testutil.go
internal/cache/: cache.go  cache_test.go
internal/fileproc/: commit.go  commit_test.go  indexed_test.go  parallel.go  parallel_test.go  pool_test.go
internal/locator/: locator.go  locator_test.go
internal/mcp/: descriptions.go  mcp_test.go  server.go  tools.go
internal/mcpserver/: descriptions.go  manifest.go  mcp_test.go  mcpserver.go  prompts.go  tools.go
internal/output/: formatter.go  formatter_test.go  tokens.go  tokens_test.go
internal/progress/: progress.go  progress_test.go
plugin/: CHANGELOG.md  plugin.json
src/: context.rs  lib.rs  main.rs  symbol.rs
tests/: complexity_snapshot_test.rs  integration_tests.rs  property_tests.rs
(+495 files in other folders)
